--- a/final-hackathon.ipynb
+++ b/final-hackathon.ipynb
@@ -60,7 +60,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aditya Parekh:"
+    "rem_cols = []\n",
+    "rem_cols.append(rem_cols_na)\n",
+    "rem_cols.append(rem_cols_one_uniq)\n",
+    "train_data = train_data.drop(rem_cols, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aditya Parekh:\n",
+    "# I am removing these columns because they have 600k+ NULL values.\n",
+    "rem_cols_na = ['country_code', 'cashflows_custody_fee', 'arp_pension_origin', 'sss_location']\n",
+    "# I am removing these columns because they have 0 NULL values, but only one unique value.\n",
+    "rem_cols_one_uniq = ['net_of_fees', 'fee_paid_separately', 'custody_fee_withdrawal', 'is_fee_exempt']\n",
+    "# The following columns are NULL when 'class_id' = NULL. DON'T REMOVE THESE YET.\n",
+    "null_3198_cols = ['debit_code', 'last_trade_date', 'contract_type', 'inception_date',\n",
+    "             'branch', 'credit_limit_type', 'retail_plan', 'language_code', 'dividend_confirm_code']"
    ]
   },
   {
@@ -93,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
