Aditya.M dropped columns

--- a/final-hackathon.ipynb
+++ b/final-hackathon.ipynb
@@ -60,18 +60,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rem_cols = []\n",
-    "rem_cols.append(rem_cols_na)\n",
-    "rem_cols.append(rem_cols_one_uniq)\n",
-    "train_data = train_data.drop(rem_cols, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Aditya Parekh:\n",
     "# I am removing these columns because they have 600k+ NULL values.\n",
     "rem_cols_na = ['country_code', 'cashflows_custody_fee', 'arp_pension_origin', 'sss_location']\n",
@@ -88,7 +76,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aditya Mani:"
+    "# Aditya Mani:\n",
+    "# 1. esir_number: Contains 673327 missing values and cannot be imputed (has very little unique values)\n",
+    "# 2. shareholder_language: Contains 623554 missing values. Says whether the shareholder speaks English or French and there seems to be an equal proportion.\n",
+    "# 3. has_no_min_commission: No Null values and only 1 unique value.\n",
+    "# 4. rep_commission_rate: 1 unique value and few missing values that cannot be imputed.\n",
+    "# 5. spousal_age_flag: No Null values and only 1 unique value.\n",
+    "# 6. is_parameters_account: No Null values and only 1 unique value.\n",
+    "# 7. rrsp_limit_reached: No Null values and only 1 unique value.\n",
+    "# 8. is_portfolio_account: No Null values and only 1 unique value.\n",
+    "# 9. sss_type: Lot of missing values\n",
+    "# 10. sss_agent: Lot of missing values\n",
+    "# 11. target_grantor_grantee_flag: Missing values\n",
+    "# 12. terminal_code: Missing values\n",
+    "\n",
+    "to_drop = ['esir_number', 'shareholder_language', 'has_no_min_commission', 'rep_commission_rate', \n",
+    "           'spousal_age_flag', 'is_parameters_account', 'rrsp_limit_reached', 'is_portfolio_account',\n",
+    "             'sss_type', 'sss_agent', 'target_grantor_grantee_flag', 'terminal_code']\n",
+    "\n",
+    "missing_3198 = ['options_trading_type',\n",
+    " 'is_midwest_clearing_account',\n",
+    " 'rep_commission_override',\n",
+    " 'interest_dividend_conversion_type',\n",
+    " 'guarantee_gtor_type',\n",
+    " 'deceased_fair_market_value',\n",
+    " 'iso_funds_code']"
    ]
   },
   {
@@ -107,6 +119,19 @@
    "outputs": [],
    "source": [
     "# Srishti Prayag:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rem_cols = []\n",
+    "rem_cols.append(rem_cols_na)\n",
+    "rem_cols.append(rem_cols_one_uniq)\n",
+    "rem_cols.append(to_drop)\n",
+    "train_data = train_data.drop(rem_cols, axis=1)"
    ]
   }
  ],
