Jithin dropped cols

--- a/final-hackathon.ipynb
+++ b/final-hackathon.ipynb
@@ -109,7 +109,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Jithin Krishna:"
+    "# Jithin Krishna:\n",
+    "\n",
+    "# Has too many null values\n",
+    "# last_update_date is the maintaineance date and was deemed not relevant to the churn\n",
+    "drop_cols = [\"special_tag\", \"conjunction\", \"title\", \"function_code\" ,\"tms_settlement_location\", \"loan_limit_override\", \"last_update_date\"]\n",
+    "\n",
+    "# These values have 1 unique value and is not useful and hence shall be dropped\n",
+    "drop_uniq_cols = [\"portfolio_cost_method\", \"portfolio_name_address_option\", \"portfolio_summary_option\",\"interactive_portfolio_code\"]\n",
+    "\n",
+    "drop_3198_cols = [\"portfolio_report_option\", \"mailing_consent\"]"
    ]
   },
   {
@@ -131,6 +140,8 @@
     "rem_cols.append(rem_cols_na)\n",
     "rem_cols.append(rem_cols_one_uniq)\n",
     "rem_cols.append(to_drop)\n",
+    "rem_cols.append(drop_cols)\n",
+    "rem_cols.append(drop_uniq_cols)\n",
     "train_data = train_data.drop(rem_cols, axis=1)"
    ]
   }
@@ -151,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
