Srishti dropped columns

--- a/final-hackathon.ipynb
+++ b/final-hackathon.ipynb
@@ -127,7 +127,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Srishti Prayag:"
+    "# Srishti Prayag:\n",
+    "# remove columns with more than 300,000 missing values\n",
+    "too_many_nans = ['special_fee_code', 'resp_specimen_plan', 'plan_end_date', 'retail_last_maintenance_user']\n",
+    "\n",
+    "# list of columns with exactly 316985 missing values; may be connected so don't drop yet\n",
+    "nan_316985_columns = ['is_pledged', 'non_calendar_year_end', 'plan_effective_date', 'is_resp', 'number_of_beneficiaries', 'rrif_original_date', 'use_original_date_for_payment_calc', 'is_family_resp', 'is_hrdc_resp', 'is_plan_grandfathered', 'retail_last_maintenance_time']\n",
+    "\n",
+    "# list of columns with only 1 unique value\n",
+    "only_one_unique = ['is_plan_grandfathered']"
    ]
   },
   {
@@ -142,6 +150,7 @@
     "rem_cols.append(to_drop)\n",
     "rem_cols.append(drop_cols)\n",
     "rem_cols.append(drop_uniq_cols)\n",
+    "rem_cols.append(too_many_nans)\n",
     "train_data = train_data.drop(rem_cols, axis=1)"
    ]
   }
@@ -162,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
