--- a/final-hackathon.ipynb
+++ b/final-hackathon.ipynb
@@ -4212,10 +4212,26 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
+      "source": [
+        "### MARKETING STRATEGIES\n",
+        "\n",
+        "- Unfortunately our model has predicted a high amount of churn in the last iteration due to certain technical issues. This is defintiely a bad sign for the company on a business level, but we hope would definitely not be the reality! However, we observed certain correlations through our iterations, which we feel could be some \n",
+        "\n",
+        "A few inferences:\n",
+        "- Customers having the account type Cash, Margin, Cash Sweep, COD usually Churn.\n",
+        "    - Possible Strategy:\n",
+        "        - Value-Added Services and Benefits:\n",
+        "            - Offer value-added services and benefits to enhance the customer experience and incentivize retention.\n",
+        "            - Provide exclusive perks, rewards, or discounts for loyal customers with Cash, Margin, Cash Sweep, and COD accounts.\n",
+        "- When is_registered is false they Churn.\n",
+        "- When is_arp_locked is true customers do Not Churn.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
